<resources>
    <string name="app_name">GameSwap</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="game_title">Game Title</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="preview">Preview</string>
    <string name="notes">Notes:</string>
    <string name="write_a_message">Write a message</string>
    <string name="log_out">Log Out</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="post_image">Post Image</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="delete">Delete</string>
    <string name="overflow">overflow</string>
    <string name="post">Post</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="condition">Condition:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="age_rating">Age Rating:</string>
    <string name="not_specified">Not specified</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="image">Image</string>
    <string name="max_playtime">Max Playtime:</string>
    <string name="min_playtime">Min Playtime:</string>
    <string name="max_players">Max Players:</string>
    <string name="min_players">Min Players:</string>
    <string name="of_players"># of players</string>
    <string name="of_minutes"># of minutes</string>
    <string name="of_pieces"># of pieces</string>
    <string name="width_in_inches">width in inches</string>
    <string name="height_in_inches">height in inches</string>
    <string name="height">Height:</string>
    <string name="width">Width:</string>
    <string name="num_pieces">Num Pieces:</string>
    <string name="choose_type">Choose a type of post to create</string>
    <string name="players">Players:</string>
    <string name="playtime">Playtime:</string>
    <string name="dimensions">Dimensions:</string>
    <string name="pieces">Pieces:</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="search_here">Search here</string>
    <string name="post_to_detail">postToDetail</string>
    <string name="try_again">Try again!</string>
    <string name="success">Sucesss!</string>
    <string name="chats">Chats</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="set_your_bio_max_180_characters">Set your bio (max 180 characters)</string>
    <string name="set_your_last_name">Set your last name</string>
    <string name="set_your_first_name">Set your first name</string>
    <string name="set_your_username">Set your username</string>
    <string name="tap_to_choose_new_profile_picture">Tap to choose a new profile picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bgg_lookup">Board Game Geek Lookup</string>
    <string name="details">Details</string>
    <string name="filter">filter</string>
    <string name="max_value">5.0</string>
    <string name="min_value">0.0</string>
    <string name="puzzles">Puzzles:</string>
    <string name="games">Games:</string>
    <string name="filter_search">Filter Search</string>
    <string name="include_games">Include Games:</string>
    <string name="include_puzzles">Include Puzzles:</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="min_age_rating">2+</string>
    <string name="max_age_rating">21+</string>
    <string name="register_text">New here? Create an account</string>
    <string name="email_address">Email Address</string>
    <string name="account_exists">Already have an account? Click here to log in</string>
    <string name="try_sending_someone_a_message">Try sending someone a message!</string>
    <string name="related_post">Related Post</string>
    <string name="blocked_accounts">Blocked Accounts</string>
    <string name="reported_posts">Reported Posts</string>
    <string name="reported_users">Reported Users</string>
    <string name="manage_reported_posts">Manage Reported Posts</string>
    <string name="completed_review">Completed Review</string>
    <string name="under_review">Under Review</string>
    <string name="status">Status:</string>
    <string name="manage_reported_users">Manage Reported Users</string>
    <string name="manage_blocked_users">Manage Blocked Users</string>
    <string name="logo">logo</string>
</resources>