<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".fragments.ComposeFragment">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/game_title"
        android:inputType="none|text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTitle"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="0dp"
        android:minHeight="32dp"
        android:padding="8dp"
        android:text="@string/camera"
        tools:layout_below="@id/etTitle" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etTitle"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="60dp"
        android:minHeight="32dp"
        android:padding="8dp"
        android:text="@string/gallery" />

    <ImageView
        android:id="@+id/ivPreview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/btnCapture"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/preview"
        tools:srcCompat="@drawable/ic_image" />

    <EditText
        android:id="@+id/etNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivPreview"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/notes"
        android:importantForAutofill="no"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/llCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNotes"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condition"
            android:textSize="18sp" />

        <RatingBar
            android:id="@+id/rbCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:numStars="5"
            tools:layout_below="@id/etNotes" />

    </LinearLayout>

    <Button
        android:id="@+id/btnPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:text="@string/post" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnPost"
        android:layout_below="@+id/llCondition"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />
</RelativeLayout>