<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/profile_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btnSave"
            android:layout_below="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvChangeImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/tap_to_choose_new_profile_picture" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvProfile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/profile_picture"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_profile" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/btnCapture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:minHeight="32dp"
                        android:padding="8dp"
                        android:text="@string/camera"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/btnGallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="32dp"
                        android:padding="8dp"
                        android:text="@string/gallery"
                        tools:ignore="ButtonStyle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <GridLayout
                        android:id="@+id/glNames"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:columnCount="2">

                        <TextView
                            android:id="@+id/tvUsername"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/username" />

                        <EditText
                            android:id="@+id/etUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:ems="10"
                            android:hint="@string/set_your_username"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:selectAllOnFocus="true"
                            android:singleLine="true" />

                        <TextView
                            android:id="@+id/tvFirstName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/first_name" />

                        <EditText
                            android:id="@+id/etFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:autofillHints=""
                            android:ems="10"
                            android:hint="@string/set_your_first_name"
                            android:inputType="textPersonName"
                            android:selectAllOnFocus="true"
                            android:singleLine="true" />

                        <TextView
                            android:id="@+id/tvLastName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/last_name" />

                        <EditText
                            android:id="@+id/etLastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:autofillHints=""
                            android:ems="10"
                            android:hint="@string/set_your_last_name"
                            android:inputType="textPersonName"
                            android:selectAllOnFocus="true"
                            android:singleLine="true" />
                    </GridLayout>

                    <LinearLayout
                        android:id="@+id/llBio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvBio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="4"
                            android:text="@string/bio" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/etBio"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="7dp"
                                android:layout_marginEnd="-4dp"
                                android:ems="10"
                                android:hint="@string/set_your_bio_max_180_characters"
                                android:importantForAutofill="no"
                                android:inputType="textMultiLine"
                                android:selectAllOnFocus="true"
                                android:singleLine="false" />

                            <TextView
                                android:id="@+id/tvCharCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/etBio"
                                android:layout_alignParentEnd="true"
                                tools:text="0/180" />
                        </RelativeLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/save" />
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
