<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="340dp"
    android:paddingTop="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:text="@string/filter_search"/>

        <View
            android:background="@color/common_google_signin_btn_text_light_disabled"
            android:layout_width = "match_parent"
            android:layout_height="1dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rlGames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/include_games"
                    tools:ignore="RelativeOverlap" />

                <CheckBox
                    android:id="@+id/gameCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlPuzzles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-12dp"
                android:layout_below="@id/rlGames">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/include_puzzles"
                    tools:ignore="RelativeOverlap" />

                <CheckBox
                    android:id="@+id/puzzleCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

        </RelativeLayout>

        <View
            android:background="@color/common_google_signin_btn_text_light_disabled"
            android:layout_width = "match_parent"
            android:layout_height="1dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvConditionSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/condition"
                android:ems="5"/>

            <TextView
                android:id="@+id/tvConditionLowerLimit"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/tvConditionSlider"
                android:text="@string/min_value"/>

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/conditionSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/tvConditionLowerLimit"
                android:layout_toStartOf="@id/tvConditionUpperLimit"
                android:valueFrom="0"
                android:valueTo="5"/>

            <TextView
                android:id="@+id/tvConditionUpperLimit"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/max_value"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDifficultySlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/difficulty"
                android:ems="5"/>

            <TextView
                android:id="@+id/tvDifficultyLowerLimit"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/tvDifficultySlider"
                android:text="@string/min_value"/>

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/difficultySlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/tvDifficultyLowerLimit"
                android:layout_toStartOf="@id/tvDifficultyUpperLimit"
                android:valueFrom="0"
                android:valueTo="5"/>

            <TextView
                android:id="@+id/tvDifficultyUpperLimit"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/max_value"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAgeRatingSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/age_rating"
                android:ems="5"/>

            <TextView
                android:id="@+id/tvAgeRatingLowerLimit"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/tvAgeRatingSlider"
                android:text="@string/min_age_rating"/>
            
            <com.google.android.material.slider.RangeSlider
                android:id="@+id/ageRatingSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/tvAgeRatingLowerLimit"
                android:layout_toStartOf="@id/tvAgeRatingUpperLimit"
                android:valueFrom="2"
                android:valueTo="21"/>

            <TextView
                android:id="@+id/tvAgeRatingUpperLimit"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/max_age_rating"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        android:weightSum="3">
        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/clear"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/apply_filter"
            android:layout_weight="2"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>